--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <header>
+    <header class="jumbotron">
       <div class="container">
         <div class="row">
           <div class="col">
@@ -61,7 +61,7 @@
               <div class="col-4 col-sm-2 offset-1">
                 <h5>Links</h5>
         
-                <ul>
+                <ul class="list-unstyled">
                   <li><a href="#"></a></li>
                   <li><a href="#"></a></li>
                   <li><a href="#"></a></li>
