--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
+
+    <!-- Google fonts and custom stylsheet -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <header class="jumbotron">
+    <header class="jumbotron jumbotron-fluid">
       <div class="container">
         <div class="row">
           <div class="col">
@@ -24,7 +28,7 @@
     </header>
 
     <div class="container">
-        <div class="row">
+        <div class="row row-content">
             <div class="col-sm-4 order-sm-last col-md-3">
                 <h2>Discover & Review</h2>
             </div>
@@ -34,7 +38,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row row-content">
             <div class="col-sm-4 col-md-3">
                 <h2>Featured Campsites</h2>
             </div>
@@ -44,7 +48,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row row-content">
             <div class="col-sm-4 order-sm-last col-md-3">
                 <h2>Our Community Partners</h2>
             </div>
