--- a/aboutus.html
+++ b/aboutus.html
@@ -30,9 +30,41 @@
       </div>
     </header>
 
+    <!-- Add Bootstrap responsive Navbar -->
+    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+      <div class="container">
+        <button
+          class="navbar-toggler ml-auto"
+          type="button"
+          data-toggle="collapse"
+          data-target="#nucampNavbar"
+        >
+          <span class="navbar-toggler-icon"> </span>
+        </button>
+        <div class="collapse navbar-collapse" id="nucampNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a href="index.html" class="nav-link">Home </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">About </a>
+            </li>
+            <li class="nav-item"><a href="#" class="nav-link">Sites </a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Contact </a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <div class="container">
       <div class="row">
         <div class="col">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item active">
+              <a href="index.html">Home </a>
+            </li>
+            <li class="breadcrumb-item">About</li>
+          </ol>
           <h2>About Us</h2>
           <hr />
         </div>
