--- a/aboutus.html
+++ b/aboutus.html
@@ -9,7 +9,11 @@
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
 
-    <!-- Google fonts and custom stylsheet -->
+    <!-- Additional CSS must be placed after Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="node_modules/font-awesome/css/font-awesome.min.css"
+    />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans"
@@ -43,14 +47,26 @@
         </button>
         <div class="collapse navbar-collapse" id="nucampNavbar">
           <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link"
+                ><i class="fa fa-home fa-lg"></i> Home
+              </a>
+            </li>
             <li class="nav-item active">
-              <a href="index.html" class="nav-link">Home </a>
+              <a href="#" class="nav-link"
+                ><i class="fa fa-info fa-lg"></i> About
+              </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">About </a>
+              <a href="#" class="nav-link"
+                ><i class="fa fa-list fa-lg"></i> Sites
+              </a>
             </li>
-            <li class="nav-item"><a href="#" class="nav-link">Sites </a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Contact </a></li>
+            <li class="nav-item">
+              <a href="#" class="nav-link"
+                ><i class="fa fa-address-card fa-lg"></i> Contact
+              </a>
+            </li>
           </ul>
         </div>
       </div>
@@ -130,14 +146,16 @@
           </div>
           <div class="col-6 col-sm-5 text-center">
             <h5>Social</h5>
-            <a href="http://instagram.com/">Instagram</a>
-            <a href="http://facebook.com/">Facebook</a>
-            <a href="http://twitter.com/">Twitter</a>
-            <a href="http://youtube.com/">YouTube</a>
+            <a href="http://instagram.com/">
+              <i class="fa fa-instagram"></i>
+            </a>
+            <a href="http://facebook.com/"> <i class="fa fa-facebook"></i> </a>
+            <a href="http://twitter.com/"> <i class="fa fa-twitter"></i> </a>
+            <a href="http://youtube.com/"> <i class="fa fa-youtube"></i> </a>
           </div>
           <div class="col-sm-4 text-center">
-            Tel: 1-206-555-1234<br />
-            Email: campsites@nucamp.co
+            <i class="fa fa-phone"></i> 1-206-555-1234 <br />
+            <i class="fa fa-envelope"></i> campsites@nucamp.co
           </div>
         </div>
       </div>
