--- a/contactus.html
+++ b/contactus.html
@@ -33,6 +33,11 @@
     <header class="jumbotron jumbotron-fluid">
       <div class="container">
         <div class="row">
+          <div class="col-4 col-sm-3 col-md-2 align-self-center">
+            <a href="index.html" class="img-fluid"
+              ><img src="img/logo.png" alt="nucamp logo" class="img-fluid"
+            /></a>
+          </div>
           <div class="col">
             <h1>NuCamp</h1>
             <h2>a better way to camp</h2>
@@ -43,6 +48,9 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
       <div class="container">
+        <a href="index.html" class="navbar-brand"
+          ><img src="img/logo.png" alt="nucamp logo" height="30" width="30"
+        /></a>
         <button
           class="navbar-toggler ml-auto"
           type="button"
