--- a/aboutus.html
+++ b/aboutus.html
@@ -88,10 +88,10 @@
       <div class="row">
         <div class="col">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item active">
+            <li class="breadcrumb-item">
               <a href="index.html">Home </a>
             </li>
-            <li class="breadcrumb-item">About</li>
+            <li class="breadcrumb-item active">About</li>
           </ol>
           <h2>About Us</h2>
           <hr />
@@ -130,7 +130,7 @@
         </div>
         <div class="col">
           <div class="card bg-light mt-3">
-            <blockquote class="blockquote card-body">
+            <blockquote class="blockquote card-body mb-0">
               <p class="mb-0">
                 I will not follow where the path may lead, but I will go where
                 there is no path, and I will leave a trail.
