--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <h1>NuCamp</h2>
             <h2>a better way to camp</h3>
           </div>
+          <div class="col-md-4 col-xl-2 mt-4">
+            <a href="#reserveForm" role="button" class="btn btn-info btn-lg text-nowrap">Reserve Campsite</a>
+          </div>
         </div>
       </div>
     </header>
@@ -71,8 +74,13 @@
                 <h2>Featured Campsites</h2>
             </div>
             <div class="col">
-                <h3>React Lake Campground</h3>
-                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                <div class="media">
+                  <div class="media-body align-self-center">
+                    <h3>React Lake Campground</h3>
+                    <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                  </div>
+                  <img class="d-flex img-thumbnail ml-3" src="img/react-lake-thumb.jpg" alt="React Lake Campsite">
+                </div>
             </div>
         </div>
 
@@ -90,6 +98,42 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="row row-content align-items-center">
+          <div class="col-sm-6 mx-auto">
+            <div class="card">
+              <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
+              <div class="card-body">
+                <form action="" id="reserveForm">
+                  <div class="form-group row">
+                    <label class="col-sm-6 col-form-label" for="numCampers">Number of Campers</label>
+                    <div class="col">
+                      <select name="numcCampers" id="numCampers" class="form-control">
+                        <option value="">Select...</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    <label for="date" class="col col-form-label">Date</label>
+                    <div class="col-sm-6">
+                      <input type="date" name="date" id="date" value="2020-12-19" class="form-control">
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col">
+                      <button type="submit" class="btn btn-primary">Search</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
         </div>
     </div>
 
