--- a/aboutus.html
+++ b/aboutus.html
@@ -149,73 +149,87 @@
       <div class="row row-content">
         <div class="col">
           <h3>Community Partners</h3>
-          <ul class="nav nav-tabs">
-            <li class="nav-item">
-              <a
-                href="#bootstrap"
-                role="tab"
-                data-toggle="tab"
-                class="nav-link active"
+
+          <div id="accordion">
+            <div class="card">
+              <div class="card-header" role="tab">
+                <h4>
+                  <a data-toggle="collapse" data-target="#bootstrap"
+                    >Bootstrap Outfitters
+                    <small>Outdoor Gear Specialists</small></a
+                  >
+                </h4>
+              </div>
+
+              <div
+                class="collapse show"
+                id="bootstrap"
+                data-parent="#accordion"
               >
-                Bootstrap Outfitters
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="#git" role="tab" data-toggle="tab" class="nav-link">
-                Git Out Expeditions
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="#mongo" role="tab" data-toggle="tab" class="nav-link">
-                Mongo Fly Shop
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="#node" role="tab" data-toggle="tab" class="nav-link">
-                Node Outdoor Apparel
-              </a>
-            </li>
-          </ul>
-          <div class="tab-content">
-            <div
-              class="tab-pane fade show active"
-              role="tabpanel"
-              id="bootstrap"
-            >
-              <h4>
-                Bootstrap Outfitters <small>Outdoor Gear Specialists</small>
-              </h4>
-              <p class="d-none d-sm-block">
-                Bootstrap Outfitters supplies you with the gear you need at
-                prices you can't beat.
-              </p>
+                <div class="card-body">
+                  <p class="d-none d-sm-block">
+                    Bootstrap Outfitters supplies you with the gear you need at
+                    prices you can't beat.
+                  </p>
+                </div>
+              </div>
             </div>
-            <div class="tab-pane fade" role="tabpanel" id="git">
-              <h4>
-                Git Out Expeditions <small>Group Adventure Expeditions</small>
-              </h4>
-              <p class="d-none d-sm-block">
-                Join Git Out Expeditions to explore new horizons with a group of
-                other adventurers!
-              </p>
+            <div class="card">
+              <div class="card-header" role="tab">
+                <h4>
+                  <a data-toggle="collapse" data-target="#git" class="collapsed"
+                    >Git Out Expeditions
+                    <small>Group Adventure Expeditions</small></a
+                  >
+                </h4>
+              </div>
+              <div class="collapse" id="git" data-parent="#accordion">
+                <div class="card-body">
+                  <p class="d-none d-sm-block">
+                    Join Git Out Expeditions to explore new horizons with a
+                    group of other adventurers!
+                  </p>
+                </div>
+              </div>
             </div>
-            <div class="tab-pane fade" role="tabpanel" id="mongo">
-              <h4>
-                Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small>
-              </h4>
-              <p class="d-none d-sm-block">
-                Need a new fishing pole, a tacklebox, or flies of all kinds?
-                Stop by Mongo Fly Shop.
-              </p>
+            <div class="card">
+              <div class="card-header" role="tab">
+                <h4>
+                  <a
+                    data-toggle="collapse"
+                    data-target="#mongo"
+                    class="collapsed"
+                  >
+                    Mongo Fly Shop
+                    <small>Your Neighborhood Fly Fishing Shop</small>
+                  </a>
+                </h4>
+              </div>
+              <div class="collapse" id="mongo" data-parent="#accordion">
+                <div class="card-body">
+                  <p class="d-none d-sm-block">
+                    Need a new fishing pole, a tacklebox, or flies of all kinds?
+                    Stop by Mongo Fly Shop.
+                  </p>
+                </div>
+              </div>
             </div>
-            <div class="tab-pane fade" role="tabpanel" id="node">
-              <h4>
-                Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small>
-              </h4>
-              <p class="d-none d-sm-block">
-                From polar fleeces to swimsuits, hiking boots to waders, a visit
-                to Node will be sure to get you covered.
-              </p>
+            <div class="card">
+              <div class="card-header" role="tab">
+                <a data-toggle="collapse" data-target="#node" class="collapsed">
+                  <h4>
+                    Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small>
+                  </h4>
+                </a>
+              </div>
+              <div class="collapse" id="node" data-parent="#node">
+                <div class="card-body">
+                  <p class="d-none d-sm-block">
+                    From polar fleeces to swimsuits, hiking boots to waders, a
+                    visit to Node will be sure to get you covered.
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
