--- a/aboutus.html
+++ b/aboutus.html
@@ -4,24 +4,12 @@
     <!-- Required meta tags always come first -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
     <!-- Additional CSS must be placed after Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="node_modules/font-awesome/css/font-awesome.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="node_modules/bootstrap-social/bootstrap-social.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans"
-    />
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="css/styles.css" />
     <title>NuCamp: A Better Way To Camp</title>
   </head>
@@ -46,38 +34,23 @@
     <!-- Add Bootstrap responsive Navbar -->
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
       <div class="container">
-        <a href="index.html" class="navbar-brand"
-          ><img src="img/logo.png" alt="nucamp logo" height="30" width="30"
-        /></a>
-        <button
-          class="navbar-toggler ml-auto"
-          type="button"
-          data-toggle="collapse"
-          data-target="#nucampNavbar"
-        >
+        <a href="index.html" class="navbar-brand"><img src="img/logo.png" alt="nucamp logo" height="30" width="30" /></a>
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#nucampNavbar">
           <span class="navbar-toggler-icon"> </span>
         </button>
         <div class="collapse navbar-collapse" id="nucampNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="index.html" class="nav-link"
-                ><i class="fa fa-home fa-lg"></i> Home
-              </a>
+              <a href="index.html" class="nav-link"><i class="fa fa-home fa-lg"></i> Home </a>
             </li>
             <li class="nav-item active">
-              <a href="#" class="nav-link"
-                ><i class="fa fa-info fa-lg"></i> About
-              </a>
+              <a href="#" class="nav-link"><i class="fa fa-info fa-lg"></i> About </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link"
-                ><i class="fa fa-list fa-lg"></i> Sites
-              </a>
+              <a href="#" class="nav-link"><i class="fa fa-list fa-lg"></i> Sites </a>
             </li>
             <li class="nav-item">
-              <a href="contactus.html" class="nav-link"
-                ><i class="fa fa-address-card fa-lg"></i> Contact
-              </a>
+              <a href="contactus.html" class="nav-link"><i class="fa fa-address-card fa-lg"></i> Contact </a>
             </li>
           </ul>
         </div>
@@ -102,13 +75,10 @@
         <div class="col-sm-6">
           <h3>Our Mission</h3>
           <p>
-            We present a curated database of the best campsites in the vast
-            woods and backcountry of the World Wide Web Wilderness. We increase
-            access to adventure for the public while promoting safe and
-            respectful use of resources. The expert wilderness trekkers on our
-            staff personally verify each campsite to make sure that they are up
-            to our standards. We also present a platform for campers to share
-            reviews on campsites they have visited with each other.
+            We present a curated database of the best campsites in the vast woods and backcountry of the World Wide Web Wilderness. We increase access to
+            adventure for the public while promoting safe and respectful use of resources. The expert wilderness trekkers on our staff personally verify each
+            campsite to make sure that they are up to our standards. We also present a platform for campers to share reviews on campsites they have visited with
+            each other.
           </p>
         </div>
         <div class="col-sm-6">
@@ -131,15 +101,10 @@
         <div class="col">
           <div class="card bg-light mt-3">
             <blockquote class="blockquote card-body mb-0">
-              <p class="mb-0">
-                I will not follow where the path may lead, but I will go where
-                there is no path, and I will leave a trail.
-              </p>
+              <p class="mb-0">I will not follow where the path may lead, but I will go where there is no path, and I will leave a trail.</p>
               <footer class="blockquote-footer">
                 Muriel Strode,
-                <cite title="Source Title"
-                  >"Wind-Wafted Wild Flowers" - The Open Court, 1903
-                </cite>
+                <cite title="Source Title">"Wind-Wafted Wild Flowers" - The Open Court, 1903 </cite>
               </footer>
             </blockquote>
           </div>
@@ -154,52 +119,35 @@
             <div class="card">
               <div class="card-header" role="tab">
                 <h4>
-                  <a data-toggle="collapse" data-target="#bootstrap"
-                    >Bootstrap Outfitters
-                    <small>Outdoor Gear Specialists</small></a
+                  <a class="text-dark text-decoration-none" data-toggle="collapse" data-target="#bootstrap"
+                    >Bootstrap Outfitters <small>Outdoor Gear Specialists</small></a
                   >
                 </h4>
               </div>
-
-              <div
-                class="collapse show"
-                id="bootstrap"
-                data-parent="#accordion"
-              >
+              <div class="collapse show" id="bootstrap" data-parent="#accordion">
                 <div class="card-body">
-                  <p class="d-none d-sm-block">
-                    Bootstrap Outfitters supplies you with the gear you need at
-                    prices you can't beat.
-                  </p>
+                  <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
                 </div>
               </div>
             </div>
             <div class="card">
               <div class="card-header" role="tab">
                 <h4>
-                  <a data-toggle="collapse" data-target="#git" class="collapsed"
-                    >Git Out Expeditions
-                    <small>Group Adventure Expeditions</small></a
+                  <a data-toggle="collapse" data-target="#git" class="collapsed text-dark text-decoration-none"
+                    >Git Out Expeditions <small>Group Adventure Expeditions</small></a
                   >
                 </h4>
               </div>
               <div class="collapse" id="git" data-parent="#accordion">
                 <div class="card-body">
-                  <p class="d-none d-sm-block">
-                    Join Git Out Expeditions to explore new horizons with a
-                    group of other adventurers!
-                  </p>
+                  <p class="d-none d-sm-block">Join Git Out Expeditions to explore new horizons with a group of other adventurers!</p>
                 </div>
               </div>
             </div>
             <div class="card">
               <div class="card-header" role="tab">
                 <h4>
-                  <a
-                    data-toggle="collapse"
-                    data-target="#mongo"
-                    class="collapsed"
-                  >
+                  <a data-toggle="collapse" data-target="#mongo" class="collapsed text-dark text-decoration-none">
                     Mongo Fly Shop
                     <small>Your Neighborhood Fly Fishing Shop</small>
                   </a>
@@ -207,27 +155,19 @@
               </div>
               <div class="collapse" id="mongo" data-parent="#accordion">
                 <div class="card-body">
-                  <p class="d-none d-sm-block">
-                    Need a new fishing pole, a tacklebox, or flies of all kinds?
-                    Stop by Mongo Fly Shop.
-                  </p>
+                  <p class="d-none d-sm-block">Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
                 </div>
               </div>
             </div>
             <div class="card">
               <div class="card-header" role="tab">
-                <a data-toggle="collapse" data-target="#node" class="collapsed">
-                  <h4>
-                    Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small>
-                  </h4>
+                <a data-toggle="collapse" data-target="#node" class="collapsed text-dark text-decoration-none">
+                  <h4>Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small></h4>
                 </a>
               </div>
               <div class="collapse" id="node" data-parent="#node">
                 <div class="card-body">
-                  <p class="d-none d-sm-block">
-                    From polar fleeces to swimsuits, hiking boots to waders, a
-                    visit to Node will be sure to get you covered.
-                  </p>
+                  <p class="d-none d-sm-block">From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
                 </div>
               </div>
             </div>
@@ -287,42 +227,23 @@
           </div>
           <div class="col-6 col-sm-5 text-center">
             <h5>Social</h5>
-            <a
-              class="btn btn-social-icon btn-instagram"
-              href="http://instagram.com/"
-            >
+            <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/">
               <i class="fa fa-instagram"></i>
             </a>
-            <a
-              class="btn btn-social-icon btn-facebook"
-              href="http://facebook.com/"
-            >
+            <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/">
               <i class="fa fa-facebook"></i>
             </a>
-            <a
-              class="btn btn-social-icon btn-twitter"
-              href="http://twitter.com/"
-            >
+            <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/">
               <i class="fa fa-twitter"></i>
             </a>
-            <a
-              class="btn btn-social-icon btn-google"
-              href="http://youtube.com/"
-            >
+            <a class="btn btn-social-icon btn-google" href="http://youtube.com/">
               <i class="fa fa-youtube"></i>
             </a>
           </div>
           <div class="col-sm-4 text-center">
-            <a role="button" href="tel:+12065551234" class="btn btn-link"
-              ><i class="fa fa-phone"></i> 1-206-555-1234</a
-            >
+            <a role="button" href="tel:+12065551234" class="btn btn-link"><i class="fa fa-phone"></i> 1-206-555-1234</a>
             <br />
-            <a
-              role="button"
-              href="mailto:campsites@nucamp.co"
-              class="btn btn-link"
-              ><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a
-            >
+            <a role="button" href="mailto:campsites@nucamp.co" class="btn btn-link"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
           </div>
         </div>
       </div>
