--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2>a better way to camp</h2>
           </div>
           <div class="col-md-4 col-xl-2 mt-4">
-            <a href="" role="button" class="btn btn-info btn-lg text-nowrap" data-toggle="modal" data-target="#reserveModal">Reserve a Campsite</a>
+            <a class="btn btn-info btn-lg text-nowrap" id="reserveButton">Reserve a Campsite</a>
           </div>
         </div>
       </div>
@@ -33,7 +33,7 @@
     <div class="modal fade" id="reserveModal" role="dialog">
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
-          <div class="modal-header bg-info text-white">
+          <div class="modal-header">
             <h3 class="modal-title">Reserve a Campsite</h3>
             <button class="close" type="button" data-dismiss="modal">&times;</button>
           </div>
@@ -103,7 +103,7 @@
             </li>
           </ul>
           <span class="navbar-text ml-auto">
-            <a role="button" data-toggle="modal" data-target="#loginModal"> <i class="fa fa-sign-in"> </i> Login </a>
+            <a role="button" id="loginButton"> <i class="fa fa-sign-in"> </i> Login </a>
           </span>
         </div>
       </div>
